packages/next-swc/crates/next-custom-transforms/tests/errors/server-actions/server-graph/4/input.js
'use server'

export default class Component {
  render() {
    return null
  }
}
